k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tylerpedersen-api
  namespace: web
spec:
  type: ClusterIP
  selector:
    app: tylerpedersen-api
  ports:
    - name: http
      port: 80
      targetPort: 3000
