k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tylerpedersen-web
  namespace: web
spec:
  type: ClusterIP
  selector:
    app: tylerpedersen-web
  ports:
    - name: http
      port: 80
      targetPort: 80
